[package]
name = "classic_bpf"
version = "0.1.1"
authors = ["Zhang Zongyu <zongyu@novazy.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/6-6-6/classic_bpf"
homepage = "https://github.com/6-6-6/classic_bpf"
description = "Build and attach classic BPF programs to sockets."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.98"
